--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -1055,7 +1055,7 @@ footer {
 .b-copyright {
 	text-align: center;
 	font-size: 14px;
-	color: #ADB3BA;
+	color: #9a8f7c;
 	line-height: 58px;
 	font-family: 'Circular Std';
 }
@@ -6084,7 +6084,7 @@ select.ca-i_input.input-error_3 {
 	    background-size: 7px 7px;
 	}
 	.c-p_title {
-		font-size: 18px;
+		font-size: 28px;
 	    margin: 0px 0 14px 0;
 	}
 	.c-p_city {
@@ -6105,7 +6105,7 @@ select.ca-i_input.input-error_3 {
 	}
 	.c-p_price {
 		height: 24px;
-	    margin: 12px 0 6px 3%;
+	    /*margin: 12px 0 6px 3%;*/
 	    -moz-border-radius: 2px;
 	    -webkit-border-radius: 2px;
 	    border-radius: 2px;
@@ -6122,7 +6122,7 @@ select.ca-i_input.input-error_3 {
 	}
 	.c-p_select {
 		height: 24px;
-		margin: 12px 0 6px 0;
+		/*margin: 12px 0 6px 0;*/
 		-moz-border-radius: 2px;
 	    -webkit-border-radius: 2px;
 	    border-radius: 2px;
@@ -7154,7 +7154,7 @@ select.ca-i_input.input-error_3 {
 		height: 26px;
 	}
 	.c-p_title {
-		display: none;
+		/*display: none;*/
 	}
 	.c-p_title.c-p_title-mobile {
 		display: block;
