Fixed phones trouble

--- a/catalog/view/theme/default/stylesheet/style.css
+++ b/catalog/view/theme/default/stylesheet/style.css
@@ -886,14 +886,14 @@ header {
 .t-c_input .input.i-2::-moz-placeholder          {color:#D4D7DF;}
 .t-c_input .input.i-2:-moz-placeholder           {color:#D4D7DF;}
 .t-c_input .input.i-2:-ms-input-placeholder      {color:#D4D7DF;}
-::-webkit-input-placeholder       {opacity: 1; transition: opacity 0.3s ease;}
+/*::-webkit-input-placeholder       {opacity: 1; transition: opacity 0.3s ease;}
 ::-moz-placeholder                {opacity: 1; transition: opacity 0.3s ease;}
 :-moz-placeholder                 {opacity: 1; transition: opacity 0.3s ease;}
 :-ms-input-placeholder            {opacity: 1; transition: opacity 0.3s ease;}
 :focus::-webkit-input-placeholder {opacity: 0; transition: opacity 0.3s ease;}
 :focus::-moz-placeholder          {opacity: 0; transition: opacity 0.3s ease;}
 :focus:-moz-placeholder           {opacity: 0; transition: opacity 0.3s ease;}
-:focus:-ms-input-placeholder      {opacity: 0; transition: opacity 0.3s ease;}
+:focus:-ms-input-placeholder      {opacity: 0; transition: opacity 0.3s ease;}*/
 /** end **/
 /***/
 .big-picture {
