--- a/catalog/view/theme/default/stylesheet/core.css
+++ b/catalog/view/theme/default/stylesheet/core.css
@@ -1989,6 +1989,24 @@ xxl
 
 		/* Custom */
 			/* Oneoff Coupon */
+				.modal .body {
+					background: url(/catalog/view/theme/default/img/modal/coupon-image.jpg) no-repeat center center scroll; 
+					-webkit-background-size: cover;
+					-moz-background-size: cover;
+					-o-background-size: cover;
+					background-size: cover;
+				}
+
+				@media (max-width: 767px) {
+					.modal .body {
+						background: url(/catalog/view/theme/default/img/modal/coupon-image-mobile.jpg) no-repeat bottom center scroll; 
+						-webkit-background-size: cover;
+						-moz-background-size: cover;
+						-o-background-size: cover;
+						background-size: cover;
+					}
+				}
+
 				@media (max-width: 767px) {
 					.modal .body {
 						max-width: 400px;
@@ -1999,20 +2017,15 @@ xxl
 					}
 				}
 
-				.modal[data-marker="modal-oneoff-coupon"] .image {
+				.modal[data-marker="modal-oneoff-coupon"] .offset {
 					height: 100%;
 					width: 40%;
-					background: url(/catalog/view/theme/default/img/modal/coupon-image.jpg) no-repeat center left scroll; 
-					-webkit-background-size: cover;
-					-moz-background-size: cover;
-					-o-background-size: cover;
-					background-size: cover;
 				}
 
 				@media (max-width: 767px) {
-					.modal[data-marker="modal-oneoff-coupon"] .image {
+					.modal[data-marker="modal-oneoff-coupon"] .offset {
 						width: 100%;
-						height: 200px;
+						height: 150px;
 					}
 				}
 
