--- a/catalog/view/theme/default/stylesheet/style.css
+++ b/catalog/view/theme/default/stylesheet/style.css
@@ -907,18 +907,24 @@ header {
 .b-p_title {
 	font-weight: 500;
 	color: #FFFFFF;
-	font-size: 52px;
+	/*font-size: 52px;
 	text-align: center;
-	line-height: 70px;
+	line-height: 70px;*/
+	font-size: 30px;
+    text-align: center;
+    line-height: 38px;
 	position: relative;
 	top: 43.5%;
 }
 @media (min-width: 768px) and (max-width: 991px) {
 	.b-p_title {
-		font-size: 38px;
-		line-height: 48px;
+		/*font-size: 38px;
+		line-height: 48px;*/
+		font-size: 24px;
+    	line-height: 32px;
 	}
 }
+
 .b-p_title_newsite {
 	font-weight: 500;
 	color: #FFFFFF;
@@ -5716,8 +5722,10 @@ select.ca-i_input.input-error_3 {
 	}
 	.b-p_title {
 	    top: 40%;
-	    font-size: 22px;
-	    line-height: 29px;
+	    /*font-size: 22px;
+	    line-height: 29px;*/
+	    font-size: 16px;
+    	line-height: 23px;
 	}
 	.b-p_title_newsite {
 		top: 40%;
